WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180155
REGRESSION (
r213590
): Scrolling to anchors broken in web views when content loaded via HTML string
https://bugs.webkit.org/show_bug.cgi?id=180155
Summary
REGRESSION (r213590): Scrolling to anchors broken in web views when content l...
Simon Fraser (smfr)
Reported
2017-11-29 11:14:58 PST
REGRESSION (
r213590
): Scrolling to anchors broken in web views when content loaded via HTML string
Attachments
Patch
(13.10 KB, patch)
2017-11-29 11:17 PST
,
Simon Fraser (smfr)
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-11-29 11:17:20 PST
Created
attachment 327878
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-11-29 11:17:39 PST
rdar://problem/34220827
WebKit Commit Bot
Comment 3
2017-11-29 11:41:27 PST
Comment on
attachment 327878
[details]
Patch Rejecting
attachment 327878
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 327878, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: .webkit.org/git/WebKit b2e9d5d..a69f99f master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 225281 = b2e9d5d036830af50368da894a2bdcc779c055ad
r225282
= a69f99f3d63b06b16510e7eafdcf892a45952a23 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
http://webkit-queues.webkit.org/results/5406305
Simon Fraser (smfr)
Comment 4
2017-11-29 12:42:22 PST
https://trac.webkit.org/r225288
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug