REGRESSION (r213590): Scrolling to anchors broken in web views when content loaded via HTML string https://bugs.webkit.org/show_bug.cgi?id=180155 rdar://problem/34220827

Reviewed by Zalan Bujtas.
Source/WebCore:

When content is loaded in a UIWebView or WKWebView via an HTML string, history().currentItem()
is null so itemAllowsScrollRestoration() would return false, preventing scrolling to anchors.

Fix by allowing scroll restoration if the the history item is null.

Tested by WebKit.NoHistoryItemScrollToFragment API test.

* loader/FrameLoader.cpp:
(WebCore::itemAllowsScrollRestoration):

Tools:

API test that loads a page with a relative anchor, and simulates a click to scroll to it.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit/MediaStreamTrackDetached.mm:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKit/NoHistoryItemScrollToFragment.mm: Added.
(-[DidScrollToFragmentDelegate _webViewDidScroll:]):
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKit/scroll-to-anchor.html: Added.

Canonical link: https://commits.webkit.org/196147@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225288 268f45cc-cd09-0410-ab3c-d52691b4dbfc